test/2/py/syntax.err
muck error: test/2/py/syntax.py:1:1: syntax error.
  !
  ^
